# sloth

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  analysis_options.yaml  justfile  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: android-apk.yml  ci.yml
android/app/: build.gradle.kts
docs/plans/: 2026-01-30-slate-content-transitions-design.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart  theme.dart
lib/constants/: nostr_event_kinds.dart
lib/hooks/: use_accounts.dart  use_active_chat.dart  use_add_relay.dart  use_amber.dart  use_android_signer.dart  use_chat_avatar.dart  use_chat_input.dart  use_chat_list.dart  use_chat_messages.dart  use_chat_profile.dart  use_chat_scroll.dart  use_clipboard_guard.dart  use_delete_all_data.dart  use_edit_profile.dart  use_follow_actions.dart  use_follows.dart  use_image_picker.dart  use_is_following.dart  use_key_packages.dart  use_list_item_controller.dart  use_login.dart  use_login_with_android_signer.dart  use_login_with_nsec.dart  use_media_download.dart  use_media_upload.dart  use_network_relays.dart  use_nsec.dart  use_onboarding_carousel.dart  use_scan.dart  use_scroll_to_message.dart  use_signup.dart  use_system_notice.dart  use_user_has_key_package.dart  use_user_metadata.dart  use_user_search.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_pt.arb  app_ru.arb  app_tr.arb  l10n.dart
lib/models/: media_upload_item.dart  reply_preview.dart
lib/observers/: active_chat_route_observer.dart
lib/providers/: account_pubkey_provider.dart  active_chat_provider.dart  amber_provider.dart  android_signer_service_provider.dart  auth_provider.dart  foreground_service_provider.dart  is_adding_account_provider.dart  locale_provider.dart  notification_provider.dart  theme_provider.dart
lib/screens/: add_profile_screen.dart  app_settings_screen.dart  appearance_screen.dart  chat_info_screen.dart  chat_invite_screen.dart  chat_list_screen.dart  chat_screen.dart  delete_all_data_confirmation_screen.dart  developer_settings_screen.dart  donate_screen.dart  edit_profile_screen.dart  error_screen.dart  home_screen.dart  login_screen.dart  message_actions_screen.dart  network_screen.dart  onboarding_screen.dart  privacy_security_screen.dart  profile_keys_screen.dart  scan_npub_screen.dart  scan_nsec_screen.dart  (+9 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs
rust/src/api/: account_groups.rs  account_settings.rs  accounts.rs  chat_list.rs  groups.rs  messages.rs  mod.rs  notifications.rs  signer.rs  user_search.rs  utils.rs
scripts/: build_android.sh  build_openssl_android.sh  check-coverage.sh  seed_test_follows.sh  setup_android_config.sh  validate-locales-keys.sh
test/: main_test.dart  routes_test.dart  test_helpers.dart  theme_test.dart
web/: index.html  manifest.json
widgetbook/: .metadata  pubspec.yaml
windows/: CMakeLists.txt
(+366 files in other folders)
