[package]
name = "rust_lib_whitenoise"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
mdk-core = { version = "0.5.1", git = "https://github.com/marmot-protocol/mdk", rev = "7c3157c803746f79a9399b9f4a3e2ff7f0064beb", features = [
    "mip04",
] }
nostr-sdk = { version = "0.44", features = [
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
url = "2.5.1"
whitenoise = { version = "0.1.0", git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "614f9d6bfb8353afce9806db70b6212fb39ebfe7" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
