[package]
name = "rust_lib_whitenoise"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
mdk-core = { version = "0.5.1", git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776", features = [
    "mip04",
] }
nostr-sdk = { version = "0.44", features = [
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
url = "2.5.1"
whitenoise = { version = "0.1.0", git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "9c3c2669d0cfa4ecc02984d82f7d5d2388d268ed" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
